--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
 	<main>
+		<section>
 		<h2>Our Mission</h2>
 		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an 
 			all-volunteer board of directors. Our mission is to bring nationally and 
@@ -29,14 +30,18 @@
 			<li>Patron Package: $200</li>
 			<li>Single Speaker: $25</li>
 		</ul>
-
-		<h1>This season's guest speakers</h1>
+		</section>
+		<aside>
+		<h1>Guest speakers</h1>
 		<h3>October<br><a href="speakers/toobin.html">Jeffrey Toobin</a></h3>
 		<img src="images/toobin75.jpg" alt="Jeffrey Toobin photo">
 		<h3>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 		<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
 		<h3>January<br><a href="speakers/chua.html">Amy Chua</a></h3>
 		<img src="images/chua75.jpg" alt="Amy Chua photo">
+		<h3>February<br><a href="speakers/c7_sampson.html">Scott Sampson</a></h3>
+		<img src="images/sampson75.jpg" alt="Scott Sampson photo">
+		</aside>
 	</main>
 	<footer>
 		<p>&copy; October 2020, Isaiah Bartlett</p>
