--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<header>
 		<img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
+		<img src="images/sampson_dinosaur.jpg" alt="sampson dino" height="80">
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
 	<main>
@@ -23,8 +24,13 @@
 			and entertain our audience! As one or our members told us:</p>
 		<blockquote>&ldquo;Each year I give a ticket package to each of our family members. 
 			I think of it as the gift of knowledge...and that is priceless.&rdquo;</blockquote>
+		<h1> Speaker of the Month<br> Fossil Threads in the Web of Life <br> February <br> Scott Sampson <br> What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number of countries in Africa.
+			<br><a href='sampson.html'>Read more.</a> Or meet us there!</h1>
+		
 
-		<h2>Our Ticket Packages</h2>
+
+		<article>	
+		<h1>Our Ticket Packages</h1>
 		<ul>
 			<li>Season Package: $95</li>
 			<li>Patron Package: $200</li>
@@ -35,13 +41,14 @@
 		<h1>Guest speakers</h1>
 		<h3>October<br><a href="speakers/toobin.html">Jeffrey Toobin</a></h3>
 		<img src="images/toobin75.jpg" alt="Jeffrey Toobin photo">
-		<h3>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
+		<p>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></p>
 		<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
-		<h3>January<br><a href="speakers/chua.html">Amy Chua</a></h3>
+		<p>January<br><a href="speakers/chua.html">Amy Chua</a></p>
 		<img src="images/chua75.jpg" alt="Amy Chua photo">
-		<h3>February<br><a href="speakers/c7_sampson.html">Scott Sampson</a></h3>
+		<p>February<br><a href="speakers/c7_sampson.html">Scott Sampson</a></p>
 		<img src="images/sampson75.jpg" alt="Scott Sampson photo">
 		</aside>
+			</article>	
 	</main>
 	<footer>
 		<p>&copy; October 2020, Isaiah Bartlett</p>
