--- a/speaker.html
+++ b/speaker.html
@@ -12,7 +12,7 @@
 	<header>
 		<img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
-		<img src="images/sampson_dinosaur.jpg" alt="sampson dino" height="80">
+		<img src="images/sampson_dinosaur.jpg" alt="sampson dino" >
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
 	<main>
