--- a/Speakers/sampson.html
+++ b/Speakers/sampson.html
@@ -17,25 +17,13 @@
 	</header>
 	<main>
 		<section>
-		<h2>Our Mission</h2>
-		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an 
-			all-volunteer board of directors. Our mission is to bring nationally and 
-			internationally renowned, thought-provoking speakers who inform, educate, 
-			and entertain our audience! As one or our members told us:</p>
-		<blockquote>&ldquo;Each year I give a ticket package to each of our family members. 
-			I think of it as the gift of knowledge...and that is priceless.&rdquo;</blockquote>
-		<h1> Speaker of the Month<br> Fossil Threads in the Web of Life <br> February <br> Scott Sampson <br> What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number of countries in Africa.
-			<br><a href='sampson.html'>Read more.</a> Or meet us there!</h1>
+		<h1> Fossil Threads in the Web of Life <h1> 
+		<img src="images/sampson_dinosaur.jpg" alt="sampson dino" >
+			<article>
+			<h2>February  Scott Sampson <h2> What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number of countries in Africa.
+			<br>Read more Or meet us there!</h1>
+			<article>
 		
-
-
-		<article>	
-		<h1>Our Ticket Packages</h1>
-		<ul>
-			<li>Season Package: $95</li>
-			<li>Patron Package: $200</li>
-			<li>Single Speaker: $25</li>
-		</ul>
 		</section>
 		<aside>
 		<h1>Guest speakers</h1>
@@ -47,6 +35,7 @@
 		<img src="images/chua75.jpg" alt="Amy Chua photo">
 		<p>February<br><a href="speakers/c7_sampson.html">Scott Sampson</a></p>
 		<img src="images/sampson75.jpg" alt="Scott Sampson photo">
+		<a href='index.html'> Home page</a> 
 		</aside>
 			</article>	
 	</main>
